--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<canvas id="myCanvas" width="800" height="600"></canvas>
 		<br>
 		<!--- Create Bootstrap button --->
-		<button class="btn btn-warning btn-lg" onclick="playAudio()">Dear Siri</button>
+		<button class="btn btn-warning btn-lg" onclick="playAudio()">Dear Dad,</button>
 	</center>
 	<audio id="myAudio" src="bdayaudio.mp3"></audio>
 	<script src="main.js"></script>
